@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-28T01:04:27Z",
+  "timestamp" : "2022-07-28T08:17:13Z",
   "count_outdated" : 421,
   "uniques_outdated" : 227,
-  "count" : 443,
-  "uniques" : 238,
+  "count" : 444,
+  "uniques" : 239,
   "clones" : [
     {
       "timestamp": "2022-07-14T00:00:00Z",
@@ -72,6 +72,13 @@
       "timestamp": "2022-07-27T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
