@@ -1,5 +1,5 @@
 {
-  "count": 22,
+  "count": 23,
   "uniques": 2,
   "clones": [
     {
@@ -50,6 +50,11 @@
     {
       "timestamp": "2022-07-27T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-28T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
